Введена переменная класса
