# app/controllers/api/swagger.yaml
@@ -25,6 +25,32 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/Health_check"
+  /start_pair:
+    get:
+      tags:
+        - "start_pair"
+      summary: "Запускает новую пару связанных портов"
+      parameters:
+        - name: "port1"
+          in: "query"
+          description: "Порт для связи и передачи лога"
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: "port2"
+          in: "query"
+          description: "Порт для связи и передачи лога"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+        400:
+          description: "Invalid parameters"
+          schema:
+            type: "string"
+            example: "Port already in use"
   /restart:
     get:
       tags:
@@ -41,6 +67,7 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/Restart"
+
 definitions:
   Thread:
     type: "object"
